# serializer version: 1
# name: TestIkemenGenerator.test_generate
  tuple(
    list([
      '/usr/bin/batocera-ikemen',
      '/userdata/roms/ikemen/rom.ikemen',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
    }),
  )
# ---
# name: TestIkemenGenerator.test_generate[config]
  '''
  {
    "KeyConfig": [
      {
        "Joystick": -1,
        "Buttons": [
          "UP",
          "DOWN",
          "LEFT",
          "RIGHT",
          "a",
          "s",
          "d",
          "z",
          "x",
          "c",
          "RETURN",
          "f",
          "v",
          "q"
        ]
      },
      {
        "Joystick": -1,
        "Buttons": [
          "KP_8",
          "KP_5",
          "KP_4",
          "KP_6",
          "p",
          "LBRACKET",
          "RBRACKET",
          "SEMICOLON",
          "QUOTE",
          "BACKSLASH",
          "SLASH",
          "o",
          "l",
          "PERIOD"
        ]
      },
      {
        "Joystick": -1,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      },
      {
        "Joystick": -1,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      }
    ],
    "JoystickConfig": [
      {
        "Joystick": 0,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      },
      {
        "Joystick": 1,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      },
      {
        "Joystick": 2,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      },
      {
        "Joystick": 3,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      }
    ],
    "Fullscreen": true
  }
  '''
# ---
# name: TestIkemenGenerator.test_generate_existing
  '''
  {
    "KeyConfig": [
      {
        "Joystick": -1,
        "Buttons": [
          "UP",
          "DOWN",
          "LEFT",
          "RIGHT",
          "a",
          "s",
          "d",
          "z",
          "x",
          "c",
          "RETURN",
          "f",
          "v",
          "q"
        ]
      },
      {
        "Joystick": -1,
        "Buttons": [
          "KP_8",
          "KP_5",
          "KP_4",
          "KP_6",
          "p",
          "LBRACKET",
          "RBRACKET",
          "SEMICOLON",
          "QUOTE",
          "BACKSLASH",
          "SLASH",
          "o",
          "l",
          "PERIOD"
        ]
      },
      {
        "Joystick": -1,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      },
      {
        "Joystick": -1,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      }
    ],
    "JoystickConfig": [
      {
        "Joystick": 0,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      },
      {
        "Joystick": 1,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      },
      {
        "Joystick": 2,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      },
      {
        "Joystick": 3,
        "Buttons": [
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used",
          "Not used"
        ]
      }
    ],
    "Fullscreen": true,
    "foo": "bar"
  }
  '''
# ---
# name: TestIkemenGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
      'menu': 'KEY_ESC',
    }),
    'name': 'ikemen',
  })
# ---
